--- a/views/user/productdetail.ejs
+++ b/views/user/productdetail.ejs
@@ -103,7 +103,7 @@
 		</div>
         </div>
 
-      <div class="row mt-5">
+      <!-- <div class="row mt-5">
         <div class="col-md-12 nav-link-wrap">
           <div
             class="nav nav-pills d-flex text-center"
@@ -360,7 +360,7 @@
             </div>
           </div>
         </div>
-      </div>
+      </div> -->
     </div>
   </section>
 
