--- a/views/user/home.ejs
+++ b/views/user/home.ejs
@@ -43,10 +43,10 @@
 	          <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" id="dropdown04" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Catalog</a>
               <div class="dropdown-menu" aria-labelledby="dropdown04">
-              	<a class="dropdown-item" href="/shop">Shop</a>
-                <a class="dropdown-item" href="/login">Single Product</a>
-                <a class="dropdown-item" href="/login">Cart</a>
-                <a class="dropdown-item" href="/login">Checkout</a>
+              	<a class="dropdown-item" href="/shop">SHOP</a>
+               
+                <a class="dropdown-item" href="/login">CART</a>
+                <a class="dropdown-item" href="/login">CHECKOUT</a>
               </div>
             </li>
 	          <li class="nav-item"><a href="/login" class="nav-link">About</a></li>
